@@ -72,7 +72,15 @@ public class DirectoryClassPathElement extends AbstractClassPathElement {
                 @Override
                 public URL getUrl() {
                     try {
-                        return file.toUri().toURL();
+                        URI uri = file.toUri();
+                        // the URLClassLoader doesn't add trailing slashes to directories, so we make sure we return
+                        // the same URL as it would to avoid having QuarkusClassLoader return different URLs
+                        // (one with a trailing slash and one without) for same resource
+                        if (uri.getPath().endsWith("/")) {
+                            String uriStr = uri.toString();
+                            return new URL(uriStr.substring(0, uriStr.length() - 1));
+                        }
+                        return uri.toURL();
                     } catch (MalformedURLException e) {
                         throw new RuntimeException(e);
                     }
